welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:21: error: not found: value Dircetion
      if (getDirection()==Dircetion.EST){
                          ^